syntax = "proto3";

import "Protos/response.proto";
import "Protos/address.proto";

option csharp_namespace = "Fleetmanagement.GrpcAPI";

package driver;

service Driver
{
	rpc GetDriver (DriverRequest) returns (DriverModel);
	rpc GetDrivers (DriversRequest) returns (stream DriverModel);
	rpc SaveDriver (DriverModel) returns (SuccessResponse);
}

message DriverRequest
{
	int32 DriverId = 1;
}

message DriversRequest { }

message DriverModel
{
	int32 Id = 1;
	string NationalIdentificationNumber = 2;
	string FirstName = 3;
	string LastName = 4;
	string Email = 5;
	string DriversLicense = 6;
	bool IsActive = 7;
	address.AddressModel Address = 8;
}
